protocols/tests/inverters/inverter_d0.out
error: `DUT.s` is not an input field of the struct `DUT`
                        (Only input fields are allowed to appear in assignments)
  ┌─ inverters/inverter_d0.prot:7:12
  │
7 │   DUT.a := DUT.s;
  │            ^^^^^ `DUT.s` is not an input field of the struct `DUT`
                        (Only input fields are allowed to appear in assignments)

